add mutation scorer to analysis

--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -465,8 +465,13 @@
                 <p-sortIcon [field]="'name'"></p-sortIcon>
               </th>
               <th [pSortableColumn]="'proteinName'">
-                proteinName
+                Protein Name
                 <p-sortIcon [field]="'proteinName'"></p-sortIcon>
+              </th>
+              <th [pSortableColumn]="'mutationScore'"
+                  class="has-tooltip" data-tooltip="Based on number of mutations. See 'About' for more information">
+                Mutation Score
+                <p-sortIcon [field]="'mutationScore'"></p-sortIcon>
               </th>
               <th *ngIf="tableHasScores" [pSortableColumn]="'score'">
                 Score
@@ -497,6 +502,7 @@
               <td><a href="https://www.uniprot.org/uniprot/{{ e.uniprotAc }}" target="_blank">{{ e.uniprotAc }}</a></td>
               <td>{{e.name}}</td>
               <td>{{e.proteinName}}</td>
+              <td>{{e.mutationScore | number : '1.0-3'}}</td>
               <td *ngIf="tableHasScores">{{e.score | number : '1.0-5'}}</td>
               <td>
                 <span *ngIf="e.isSeed">
@@ -553,6 +559,11 @@
                 Cancer Type
                 <p-sortIcon [field]="'type'"></p-sortIcon>
               </th>
+              <th [pSortableColumn]="'mutationScore'"
+                  class="has-tooltip" data-tooltip="Based on number of mutations. See 'About' for more information">
+                Mutation Score
+                <p-sortIcon [field]="'mutationScore'"></p-sortIcon>
+              </th>
               <th *ngIf="tableHasScores" [pSortableColumn]="'score'">
                 Score
                 <p-sortIcon [field]="'score'"></p-sortIcon>
@@ -572,6 +583,7 @@
               <td><a href="https://www.ncbi.nlm.nih.gov/gene/{{ e.entrezId }}">{{e.entrezId}}</a></td>
               <td>{{e.cancerOccurrences}}</td>
               <td>{{e.type}}</td>
+              <td>{{ e.mutationScore | number : '1.0-3' }}</td>
               <td *ngIf="tableHasScores">{{ e.score | number : '1.0-5' }}</td>
               <td>
                 <span *ngIf="e.isSeed">
