--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -28,10 +28,10 @@
           <ol>
             <li>Select the viral interaction dataset (SARS-CoV1-Pfefferle, SARS-CoV1-VirHostNet, SARS-CoV2-Gordon).</li>
             <li>Select proteins of interest as seed proteins.</li>
-            <li>Perform network analysis (multi-Steiner, TrustRank, KeyPathwayMiner, closeness centrality).</li>
+            <li>Perform network analysis (multi-Steiner, TrustRank, KeyPathwayMiner, harmonic centrality).</li>
             <li>Platform usage: basic and advanced options</li>
             <li>Inspect the resulting subnetworks.</li>
-            <li>Find drugs associated with the subnetwork (TrustRank, closeness centrality).</li>
+            <li>Find drugs associated with the subnetwork (TrustRank, harmonic centrality).</li>
             <li>Download your results.</li>
           </ol>
           <p>CoVex also provides a quick analysis option to perform steps 3 to 5 (starting from the seed proteins) to
