--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,14 +23,14 @@
           <span class="icon"><i class="fa fa-search"></i></span>
           <span>Drug</span>
         </a>
-        <a routerLink="/cite" routerLinkActive="is-active" class="navbar-item is-hoverable">
-          <span class="icon"><i class="fa fa-feather"></i></span>
-          <span>Cite</span>
-        </a>
-        <a routerLink="/download" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
-          <span class="icon"><i class="fa fa-download"></i></span>
-          <span>Download</span>
-        </a>
+<!--        <a routerLink="/cite" routerLinkActive="is-active" class="navbar-item is-hoverable">-->
+<!--          <span class="icon"><i class="fa fa-feather"></i></span>-->
+<!--          <span>Cite</span>-->
+<!--        </a>-->
+<!--        <a routerLink="/download" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">-->
+<!--          <span class="icon"><i class="fa fa-download"></i></span>-->
+<!--          <span>Download</span>-->
+<!--        </a>-->
         <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
           <span class="icon"><i class="fa fa-question"></i></span>
           <span>About</span>
@@ -40,7 +40,7 @@
         <div class="navbar-item has-text-light">
           <div class="field is-grouped">
             <p class="control">
-               Version 0.1
+               Version 1.0
             </p>
           </div>
         </div>
