--- a/src/app/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/dialogs/launch-analysis/launch-analysis.component.html
@@ -100,6 +100,14 @@
           </app-toggle>
         </div>
 
+        <div class="field">
+          <label class="label">Mutation Weights</label>
+          <app-toggle textOn="Yes" textOff="No" tooltipOn="Use mutation score as edge weights."
+                      tooltipOff="Dont consider mutation score in algorithm."
+                      [(value)]="mutationWeights">
+          </app-toggle>
+        </div>
+
         <div class="box">
           <article class="media">
             <div class="media-left">
@@ -181,6 +189,14 @@
                       tooltipOn="Include cancer driver genes that are not seeds."
                       tooltipOff="Exclude cancer driver genes that are not seeds."
                       [(value)]="harmonicIncludeCancerNonSeeds"></app-toggle>
+        </div>
+
+        <div class="field">
+          <label class="label">Mutation Weights</label>
+          <app-toggle textOn="Yes" textOff="No" tooltipOn="Use mutation score as edge weights."
+                      tooltipOff="Dont consider mutation score in algorithm."
+                      [(value)]="mutationWeights">
+          </app-toggle>
         </div>
 
         <div class="box">
@@ -296,6 +312,14 @@
           </p>
         </div>
 
+        <div class="field">
+          <label class="label">Mutation Weights</label>
+          <app-toggle textOn="Yes" textOff="No" tooltipOn="Use mutation score as edge weights."
+                      tooltipOff="Dont consider mutation score in algorithm."
+                      [(value)]="mutationWeights">
+          </app-toggle>
+        </div>
+
         <div class="box">
           <article class="media">
             <div class="media-left">
@@ -353,6 +377,14 @@
                       tooltipOn="Include cancer driver genes that are not seeds."
                       tooltipOff="Exclude cancer driver genes that are not seeds."
                       [(value)]="betweennessIncludeCancerNonSeeds"></app-toggle>
+        </div>
+
+        <div class="field">
+          <label class="label">Mutation Weights</label>
+          <app-toggle textOn="Yes" textOff="No" tooltipOn="Use mutation score as edge weights."
+                      tooltipOff="Dont consider mutation score in algorithm."
+                      [(value)]="mutationWeights">
+          </app-toggle>
         </div>
 
         <div class="box">
@@ -485,7 +517,18 @@
                       tooltipOff="Exclude vcancer driver genes that are not seeds."
                       [(value)]="multisteinerIncludeCancerNonSeeds"></app-toggle>
         </div>
+
+        <div class="field">
+          <label class="label">Mutation Weights</label>
+          <app-toggle textOn="Yes" textOff="No" tooltipOn="Use mutation score as edge weights."
+                      tooltipOff="Dont consider mutation score in algorithm."
+                      [(value)]="mutationWeights">
+          </app-toggle>
+        </div>
+
       </div>
+
+
 
       <div class="field" *ngIf="target === 'drug'">
         <label class="label">Gene Drug Interactions</label>
@@ -514,6 +557,22 @@
         </app-toggle>
         <p class="help">
           Set this to only consider ATC class L drugs for the search.
+        </p>
+      </div>
+
+      <div class="field" *ngIf="algorithm!=='multisteiner'">
+        <label class="label">Filter Edges</label>
+        <app-toggle textOn="Yes" textOff="No" tooltipOn="Reduce edges to only shortest paths between seeds and results."
+                    tooltipOff="Show all edges in the resulting network"
+                    [(value)]="filterPaths">
+        </app-toggle>
+        <p class="help">
+          Automatically filter edges to make network more clear by only showing shorter pathways.
+
+          <a href="https://docs.google.com/document/d/1_SRnIx_UC8FR59rMyrf_r45fCIt3naP4t1qefYNp9vk" target="_blank">
+            Check the documentation for more info
+          </a>
+
         </p>
       </div>
 
