--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -34,17 +34,55 @@
             downloaded for further processing.</li>
           </ol>
 
-          <h2>Source code</h2>
-          <p>
-            The source code is available upon request: michael.hartung_AT_tum.de
-          </p>
+<!--          <h2>Source code</h2>-->
+<!--          <p>-->
+<!--            The source code is available upon request: michael.hartung@tum.de-->
+<!--          </p>-->
 
           <h2>Help/Contact information</h2>
-          <ul>
-            <li>General support and inquiries: Michael Hartung (michael.hartung_AT_tum.de)</li>
-            <li>Project coordination: Prof. Dr. Jan Baumbach (jan.baumbach_AT_wzw.tum.de)</li>
-<!--            <li>Lab website: <a href="http://www.exbio.de">http://www.exbio.de</a></li>-->
-          </ul>
+          <div>
+          <p>
+            This project is a cooperation between the chair of Computational Systems Biology from the University of
+            Hamburg and the research group Big Data in Biomedicine from the Technical University of Munich.
+          </p>
+          </div>
+          <br>
+
+
+          <div>
+            <p>
+              <b>Prof. Dr. Jan Baumbach</b><br>
+              Chair of Computational Systems Biology
+              <br>
+              <i class="fa fa-phone"></i> Phone: +49-8161-71-2136<br>
+              <i class="fa fa-envelope"> </i> Email: cosyb@zbh.uni-hamburg.de<br>
+              Chair of Computational Systems Biology
+              <br>
+              University of Hamburg
+              <br>
+              Notkestrasse 9<br>
+              22607 Hamburg<br>
+              Germany
+            </p>
+          </div>
+          <br>
+
+
+          <div>
+            <p>
+              <b>Dr. Markus List</b><br>
+              Head of the Research Group Big Data in Biomedicine
+              <br>
+              <i class="fa fa-phone"></i> Phone: +49 8161 71 2761<br>
+              <i class="fa fa-envelope"> </i> Email: markus.list@wzw.tum.de<br>
+              Chair of Experimental Bioinformatics<br>
+              TUM School of Life Sciences Weihenstephan<br>
+              Technical University of Munich<br>
+              Maximus-von-Imhof-Forum 3<br>
+              85354 Freising<br>
+              Germany<br>
+            </p>
+          </div>
 
           <br>
           <br>
@@ -54,26 +92,6 @@
           <br>
           <br>
 
-<!--          <div class="has-text-centered">-->
-<!--            <h2 class="subtitle"> Impressum</h2>-->
-<!--            <p>-->
-<!--              Prof. Dr. Jan Baumbach-->
-<!--              Chair of Experimental Bioinformatics-->
-<!--              <br>-->
-<!--              <i class="fa fa-phone"></i> Phone: +49-8161-71-2136<br>-->
-<!--              <i class="fa fa-phone"></i> Fax: +49-8161-71-2186<br>-->
-<!--              <i class="fa fa-envelope"> </i> Email: exbio_AT_wzw.tum.de<br>-->
-<!--              <i class="fa fa-map-marker"></i> Address: ​​​Prof. Dr. Jan Baumbach-->
-<!--              <br>-->
-<!--              Chair of Experimental Bioinformatics-->
-<!--              <br>-->
-<!--              TUM School of Life Sciences Weihenstephan-->
-<!--              <br>-->
-<!--              Technical University of Munich<br>-->
-<!--              Maximus-von-Imhof-Forum 3<br>-->
-<!--              85354 Freising<br>-->
-<!--              Germany </p>-->
-<!--          </div>-->
         </div>
       </div>
     </div>
