--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -39,7 +39,7 @@
 <!--            The source code is available upon request: michael.hartung@tum.de-->
 <!--          </p>-->
 
-          <h2>Help/Contact information</h2>
+          <h2>Impressum</h2>
           <div>
           <p>
             This project is a cooperation between the chair of Computational Systems Biology from the University of
