--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -22,8 +22,9 @@
 
 
           </p>
+          <div class="has-text-centered">
           <h2 class="subtitle">General workflow of the platform</h2>
-
+          </div>
           <div class="container has-text-centered width-500">
             <img src="assets/workflow.png">
           </div>
@@ -39,7 +40,10 @@
 <!--            The source code is available upon request: michael.hartung@tum.de-->
 <!--          </p>-->
 
-          <h2>Impressum</h2>
+          <br>
+          <br>
+          <div class="has-text-centered">
+            <h2>Impressum</h2></div>
           <div>
           <p>
             This project is a cooperation between the chair of Computational Systems Biology from the University of
@@ -56,6 +60,7 @@
               <br>
               <i class="fa fa-phone"></i> Phone: +49-8161-71-2136<br>
               <i class="fa fa-envelope"> </i> Email: cosyb@zbh.uni-hamburg.de<br>
+              <i class="fa fa-link"></i> <a href="https://www.cosy.bio/">https://www.cosy.bio/</a><br>
               Chair of Computational Systems Biology
               <br>
               University of Hamburg
@@ -71,10 +76,11 @@
           <div>
             <p>
               <b>Dr. Markus List</b><br>
-              Head of the Research Group Big Data in Biomedicine
+              Head of the Research Group Big Data in BioMedicine
               <br>
               <i class="fa fa-phone"></i> Phone: +49 8161 71 2761<br>
               <i class="fa fa-envelope"> </i> Email: markus.list@wzw.tum.de<br>
+              <i class="fa fa-link"></i> <a href="https://biomedical-big-data.de/">https://biomedical-big-data.de/</a><br>
               Chair of Experimental Bioinformatics<br>
               TUM School of Life Sciences Weihenstephan<br>
               Technical University of Munich<br>
